# Raw-Machine-Learning

./: .gitignore  CMakeLists.txt  MNIST_test1.txt  MNIST_test2.txt  MNIST_test3_CNN.txt  activation.cpp  activation.h  architecture_md.md  backend_interface.h  benchmark_results.txt  check.cu  cuda_optimisations.md  dense.cpp  dense.h  eigen_backend.cpp  eigen_backend.h  layer.h  loss.cpp  loss.h  main.cpp  mnist_loader.cpp  mnist_loader.h  mnist_run.txt  readme.md  sequential.cpp  sequential.h  tensor.cpp  tensor.h
backends/: cuda_backend.cu  cuda_backend.h  eigen_backend.cpp  eigen_backend.h
benchmarks/: benchmark_results.txt  matmul_bench.cpp
core/: backend_interface.h  tensor.cpp  tensor.h
data/: mnist_loader.cpp  mnist_loader.h
layers/: activation.cpp  conv2d.cpp  conv2d.h  dense.cpp  dense.h  flatten.h  globalavgpool.h  layer.h  maxpool2d.cpp  maxpool2d.h
loss/: loss.cpp  loss.h
mnist_testing/: mnist_run_cnn.txt
testing/: unit_tests.cpp
